k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: despacho-service
spec:
  selector:
    app: despacho
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
