k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: despacho-ingress
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /despachos
            pathType: Prefix
            backend:
              service:
                name: despacho-service
                port:
                  number: 8081
